--- a/Kakebo/Modules/AddExpense/View/AddExpenseViewController.xib
+++ b/Kakebo/Modules/AddExpense/View/AddExpenseViewController.xib
@@ -12,7 +12,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddExpenseViewController" customModule="Kakebo" customModuleProvider="target">
             <connections>
-                <outlet property="textField" destination="Th7-aK-T7A" id="7mn-y1-GF7"/>
+                <outlet property="amountTextField" destination="Th7-aK-T7A" id="2j9-fs-BWh"/>
+                <outlet property="nameTextField" destination="ekx-OZ-rJ9" id="nHf-TD-2WF"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,8 +22,17 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ekx-OZ-rJ9">
+                    <rect key="frame" x="107" y="84" width="200" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="200" id="6Jp-Xp-3Lw"/>
+                    </constraints>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Th7-aK-T7A">
-                    <rect key="frame" x="147" y="84" width="120" height="30"/>
+                    <rect key="frame" x="147" y="134" width="120" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="120" id="W5a-6d-WcN"/>
                     </constraints>
@@ -33,7 +43,9 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="Th7-aK-T7A" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="40" id="akd-iC-4hq"/>
+                <constraint firstItem="ekx-OZ-rJ9" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ABV-0J-V88"/>
+                <constraint firstItem="ekx-OZ-rJ9" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="40" id="Zsq-cs-a3F"/>
+                <constraint firstItem="Th7-aK-T7A" firstAttribute="top" secondItem="ekx-OZ-rJ9" secondAttribute="bottom" constant="20" id="qIn-cK-j8D"/>
                 <constraint firstItem="Th7-aK-T7A" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="sbM-j4-s4w"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
