--- a/Kakebo/Modules/AddExpense/View/AddExpenseViewController.xib
+++ b/Kakebo/Modules/AddExpense/View/AddExpenseViewController.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddExpenseViewController" customModule="Kakebo" customModuleProvider="target">
             <connections>
-                <outlet property="amountView" destination="ajH-7i-Sk1" id="Zat-PT-YFT"/>
+                <outlet property="amountField" destination="ajH-7i-Sk1" id="RZ7-88-p8D"/>
                 <outlet property="nameTextField" destination="ekx-OZ-rJ9" id="nHf-TD-2WF"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -31,11 +31,10 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ajH-7i-Sk1" customClass="AmountView" customModule="Kakebo" customModuleProvider="target">
-                    <rect key="frame" x="157" y="134" width="100" height="30"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ajH-7i-Sk1" customClass="AmountField" customModule="Kakebo" customModuleProvider="target">
+                    <rect key="frame" x="107" y="134" width="200" height="30"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="100" id="Ah3-qK-bDB"/>
                         <constraint firstAttribute="height" constant="30" id="Uik-8U-nNb"/>
                     </constraints>
                 </view>
@@ -46,6 +45,7 @@
                 <constraint firstItem="ekx-OZ-rJ9" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ABV-0J-V88"/>
                 <constraint firstItem="ajH-7i-Sk1" firstAttribute="top" secondItem="ekx-OZ-rJ9" secondAttribute="bottom" constant="20" id="VJt-GQ-KI9"/>
                 <constraint firstItem="ekx-OZ-rJ9" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="40" id="Zsq-cs-a3F"/>
+                <constraint firstItem="ajH-7i-Sk1" firstAttribute="width" secondItem="ekx-OZ-rJ9" secondAttribute="width" id="maw-tx-6he"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
