--- a/Kakebo/Modules/ExpensesList/View/ExpensesListViewController.xib
+++ b/Kakebo/Modules/ExpensesList/View/ExpensesListViewController.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ExpensesViewController" customModule="Kakebo" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ExpensesListViewController" customModule="Kakebo" customModuleProvider="target">
             <connections>
                 <outlet property="tableView" destination="E2R-Oc-b10" id="BU2-A2-3fj"/>
                 <outlet property="view" destination="E2R-Oc-b10" id="foD-oQ-jIw"/>
