--- a/Kakebo/Common/Form/Text/TextFormFieldView.xib
+++ b/Kakebo/Common/Form/Text/TextFormFieldView.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -31,16 +30,15 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="94x-T8-7Eq" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="5" id="0JX-xc-Drf"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="94x-T8-7Eq" secondAttribute="trailing" constant="10" id="2av-m8-avG"/>
-                <constraint firstItem="IqJ-qc-iIb" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="9kr-Re-eep"/>
+                <constraint firstItem="94x-T8-7Eq" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="0JX-xc-Drf"/>
+                <constraint firstAttribute="trailing" secondItem="94x-T8-7Eq" secondAttribute="trailing" constant="10" id="2av-m8-avG"/>
+                <constraint firstItem="IqJ-qc-iIb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="9kr-Re-eep"/>
                 <constraint firstItem="94x-T8-7Eq" firstAttribute="leading" secondItem="IqJ-qc-iIb" secondAttribute="trailing" constant="10" id="9m9-JC-8Wt"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="94x-T8-7Eq" secondAttribute="bottom" constant="5" id="PaJ-2h-LDQ"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="IqJ-qc-iIb" secondAttribute="bottom" constant="5" id="V0A-wz-I0b"/>
-                <constraint firstItem="IqJ-qc-iIb" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="5" id="wWZ-re-xbb"/>
+                <constraint firstAttribute="bottom" secondItem="94x-T8-7Eq" secondAttribute="bottom" constant="5" id="PaJ-2h-LDQ"/>
+                <constraint firstAttribute="bottom" secondItem="IqJ-qc-iIb" secondAttribute="bottom" constant="5" id="V0A-wz-I0b"/>
+                <constraint firstItem="IqJ-qc-iIb" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="wWZ-re-xbb"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="textField" destination="94x-T8-7Eq" id="uSQ-9p-vkV"/>
                 <outlet property="titleLabel" destination="IqJ-qc-iIb" id="JRh-6v-wDU"/>
