--- a/Kakebo/Modules/ExpensesList/View/SectionHeader/ExpensesListSectionView.xib
+++ b/Kakebo/Modules/ExpensesList/View/SectionHeader/ExpensesListSectionView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -16,13 +16,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="moz-Cb-5Hp">
-                    <rect key="frame" x="10" y="10" width="42" height="47"/>
+                    <rect key="frame" x="10" y="5" width="42" height="57"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="960-P3-UGt">
-                    <rect key="frame" x="362" y="10" width="42" height="47"/>
+                    <rect key="frame" x="362" y="5" width="42" height="57"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -30,11 +30,11 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="960-P3-UGt" secondAttribute="bottom" constant="10" id="8vi-gY-I3L"/>
+                <constraint firstAttribute="bottom" secondItem="960-P3-UGt" secondAttribute="bottom" constant="5" id="8vi-gY-I3L"/>
                 <constraint firstItem="moz-Cb-5Hp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="F2n-zN-uSu"/>
-                <constraint firstItem="960-P3-UGt" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="XRh-z4-T1F"/>
-                <constraint firstAttribute="bottom" secondItem="moz-Cb-5Hp" secondAttribute="bottom" constant="10" id="pBz-VW-qKN"/>
-                <constraint firstItem="moz-Cb-5Hp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="qeI-dY-oNv"/>
+                <constraint firstItem="960-P3-UGt" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="XRh-z4-T1F"/>
+                <constraint firstAttribute="bottom" secondItem="moz-Cb-5Hp" secondAttribute="bottom" constant="5" id="pBz-VW-qKN"/>
+                <constraint firstItem="moz-Cb-5Hp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="qeI-dY-oNv"/>
                 <constraint firstAttribute="trailing" secondItem="960-P3-UGt" secondAttribute="trailing" constant="10" id="sNy-rz-IaF"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
