--- a/Kakebo/Modules/ExpensesList/View/Header/ExpensesListHeaderView.xib
+++ b/Kakebo/Modules/ExpensesList/View/Header/ExpensesListHeaderView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ExpensesListSectionView" customModule="Kakebo" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ExpensesListHeaderView" customModule="Kakebo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="67"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -28,7 +28,6 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="960-P3-UGt" secondAttribute="bottom" constant="5" id="8vi-gY-I3L"/>
                 <constraint firstItem="moz-Cb-5Hp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="F2n-zN-uSu"/>
