--- a/Kakebo/Modules/ExpenseList/List/View/ExpenseListViewController.xib
+++ b/Kakebo/Modules/ExpenseList/List/View/ExpenseListViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ExpenseListViewController" customModule="Kakebo" customModuleProvider="target">
             <connections>
+                <outlet property="scrollView" destination="d4Q-3y-MGg" id="faX-hb-CzR"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="y1H-Dl-pIP"/>
             </connections>
         </placeholder>
@@ -19,7 +20,18 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d4Q-3y-MGg">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                </scrollView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="d4Q-3y-MGg" secondAttribute="bottom" id="1fU-UU-PWX"/>
+                <constraint firstItem="d4Q-3y-MGg" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="eyq-kA-EV5"/>
+                <constraint firstItem="d4Q-3y-MGg" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="ipW-PE-t9I"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="d4Q-3y-MGg" secondAttribute="trailing" id="scX-2c-ZDc"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
     </objects>
