--- a/Kakebo/Modules/Expenses/View/ExpensesViewController.xib
+++ b/Kakebo/Modules/Expenses/View/ExpensesViewController.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ExpenseListViewController" customModule="Kakebo" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ExpensesViewController" customModule="Kakebo" customModuleProvider="target">
             <connections>
                 <outlet property="scrollView" destination="d4Q-3y-MGg" id="faX-hb-CzR"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="y1H-Dl-pIP"/>
