--- a/Kakebo/Common/Form/Calendar/Keyboard/CalendarFormFieldViewCell.xib
+++ b/Kakebo/Common/Form/Calendar/Keyboard/CalendarFormFieldViewCell.xib
@@ -1,24 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CalendarFormFieldViewCell" id="gTV-IL-0wX" customClass="CalendarFormFieldViewCell" customModule="Kakebo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="CalendarFormFieldViewCell" id="gTV-IL-0wX" customClass="CalendarFormFieldViewCell" customModule="Kakebo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="338" height="186"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="338" height="186"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HpH-U7-J2w">
+                        <rect key="frame" x="0.0" y="3" width="338" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <point key="canvasLocation" x="139" y="153"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="HpH-U7-J2w" secondAttribute="trailing" id="QVK-eh-A8O"/>
+                <constraint firstItem="HpH-U7-J2w" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="aWH-UB-o6W"/>
+                <constraint firstItem="HpH-U7-J2w" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="3" id="z3C-gl-eQG"/>
+            </constraints>
+            <size key="customSize" width="338" height="186"/>
+            <connections>
+                <outlet property="titleLabel" destination="HpH-U7-J2w" id="KNf-Oo-qhp"/>
+            </connections>
+            <point key="canvasLocation" x="-204" y="121"/>
         </collectionViewCell>
     </objects>
 </document>
