--- a/Kakebo/Modules/Expenses/View/List/View/Cell/ExpenseListCell.xib
+++ b/Kakebo/Modules/Expenses/View/List/View/Cell/ExpenseListCell.xib
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,23 +12,29 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UxN-aG-pEN">
-                        <rect key="frame" x="10" y="10" width="248" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UxN-aG-pEN">
+                        <rect key="frame" x="10" y="10" width="230" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sbr-NO-GkK">
-                        <rect key="frame" x="268" y="10" width="42" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Amount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sbr-NO-GkK">
+                        <rect key="frame" x="250" y="10" width="60" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0P5-bY-Jmc">
-                        <rect key="frame" x="268" y="41" width="42" height="28.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0P5-bY-Jmc">
+                        <rect key="frame" x="272" y="41" width="38" height="29"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Categories Categories Categories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d7u-Cr-MCT">
+                        <rect key="frame" x="10" y="41" width="252" height="29"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -39,8 +42,12 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Sbr-NO-GkK" secondAttribute="trailing" constant="10" id="0Ka-IY-F6K"/>
+                    <constraint firstItem="d7u-Cr-MCT" firstAttribute="leading" secondItem="UxN-aG-pEN" secondAttribute="leading" id="Fax-fG-SoU"/>
+                    <constraint firstAttribute="bottom" secondItem="d7u-Cr-MCT" secondAttribute="bottom" priority="998" constant="10" id="MYS-KB-awN"/>
                     <constraint firstItem="UxN-aG-pEN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="ObA-Uo-k3p"/>
                     <constraint firstAttribute="trailing" secondItem="0P5-bY-Jmc" secondAttribute="trailing" constant="10" id="PJx-f9-RPP"/>
+                    <constraint firstItem="0P5-bY-Jmc" firstAttribute="leading" secondItem="d7u-Cr-MCT" secondAttribute="trailing" constant="10" id="RrB-4c-c4z"/>
+                    <constraint firstItem="d7u-Cr-MCT" firstAttribute="top" secondItem="UxN-aG-pEN" secondAttribute="bottom" constant="10" id="TIv-vk-CLj"/>
                     <constraint firstItem="Sbr-NO-GkK" firstAttribute="leading" secondItem="UxN-aG-pEN" secondAttribute="trailing" constant="10" id="W0D-Gb-5hN"/>
                     <constraint firstItem="UxN-aG-pEN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="YmG-TZ-5iq"/>
                     <constraint firstItem="0P5-bY-Jmc" firstAttribute="top" secondItem="Sbr-NO-GkK" secondAttribute="bottom" constant="10" id="e5u-2X-LvY"/>
@@ -50,6 +57,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="amountLabel" destination="Sbr-NO-GkK" id="Mrb-1b-Na6"/>
+                <outlet property="categoriesLabel" destination="d7u-Cr-MCT" id="ggM-OV-3qD"/>
                 <outlet property="dateLabel" destination="0P5-bY-Jmc" id="fCJ-Cc-skZ"/>
                 <outlet property="nameLabel" destination="UxN-aG-pEN" id="etY-CH-zCG"/>
             </connections>
