--- a/Kakebo/Modules/CategorySelector/View/CategorySelectorViewController.storyboard
+++ b/Kakebo/Modules/CategorySelector/View/CategorySelectorViewController.storyboard
@@ -20,29 +20,29 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CategorySelectorCell" id="1uS-YK-ysU" customClass="CategorySelectorCell" customModule="Kakebo" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="63.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="46.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1uS-YK-ysU" id="cU5-5g-eAI">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="63.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="46.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ACT-XF-F5o">
-                                                    <rect key="frame" x="20" y="21" width="42" height="21.5"/>
+                                                    <rect key="frame" x="20" y="13" width="42" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fkl-bU-lf8">
-                                                    <rect key="frame" x="350.5" y="10" width="43.5" height="43.5"/>
+                                                    <rect key="frame" x="367.5" y="10" width="26.5" height="26.5"/>
                                                     <constraints>
+                                                        <constraint firstAttribute="height" constant="26" id="ery-Vh-QL0"/>
                                                         <constraint firstAttribute="width" secondItem="Fkl-bU-lf8" secondAttribute="height" multiplier="1:1" id="fta-YI-TKt"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="Fkl-bU-lf8" secondAttribute="bottom" constant="10" id="3n5-Uc-X8B"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="ACT-XF-F5o" secondAttribute="bottom" constant="10" id="FSG-lQ-OJP"/>
-                                                <constraint firstItem="ACT-XF-F5o" firstAttribute="top" secondItem="cU5-5g-eAI" secondAttribute="topMargin" constant="10" id="PBU-wG-JR8"/>
+                                                <constraint firstItem="ACT-XF-F5o" firstAttribute="centerY" secondItem="cU5-5g-eAI" secondAttribute="centerY" id="YKf-5Z-O4u"/>
                                                 <constraint firstItem="ACT-XF-F5o" firstAttribute="leading" secondItem="cU5-5g-eAI" secondAttribute="leading" constant="20" id="ZaD-6W-FFP"/>
                                                 <constraint firstItem="Fkl-bU-lf8" firstAttribute="top" secondItem="cU5-5g-eAI" secondAttribute="top" constant="10" id="bYS-CH-H80"/>
                                                 <constraint firstAttribute="trailing" secondItem="Fkl-bU-lf8" secondAttribute="trailing" constant="20" id="muh-6i-8QO"/>
