--- a/Kakebo/Modules/CategorySelector/View/CategorySelectorViewController.storyboard
+++ b/Kakebo/Modules/CategorySelector/View/CategorySelectorViewController.storyboard
@@ -35,7 +35,7 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fkl-bU-lf8">
                                                     <rect key="frame" x="367.5" y="10" width="26.5" height="26.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="26" id="ery-Vh-QL0"/>
+                                                        <constraint firstAttribute="height" priority="999" constant="26" id="ery-Vh-QL0"/>
                                                         <constraint firstAttribute="width" secondItem="Fkl-bU-lf8" secondAttribute="height" multiplier="1:1" id="fta-YI-TKt"/>
                                                     </constraints>
                                                 </imageView>
